# awl

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/awl/: __init__.py  __main__.py  __version__.py  cli.py  core.py
tests/: __init__.py  conftest.py  test_awl.py  test_cli.py  test_cli_integration.py  test_cli_unit.py  test_core.py  test_testing.py  test_unit.py
